# utility_code

./: gitconfig.md  gitignore_global.md  zshrc.md
Threads/cohort/: README.md  bun.lockb  index.ts  instructions.md  output.md  package.json
Threads/cohort/examples/solana ecosystem call/: prompt1.md  prompt2.md  prompt3.md  prompt4.md  prompt5.md  prompt6.md  thread1.md
Threads/cohort/templates/: cohort.md  cohort_improved.md  cohort_modified.md  thread.md
Threads/cohort/weeks/week_1.2/: diagrams.md  output.md
Threads/cohort/weeks/week_2/: info.md  output.md
Threads/cohort/weeks/week_2.1/: diagrams.md  info.md  output.md
code_template/: README.md  bun.lockb  index.ts  package.json
code_template/templates/: express-drizzle-starter.sh  express-prisma-starter.sh  express-starter.sh  fastapi-sqlmodel-starter-sqlite.sh  fastapi-sqlmodel-starter.sh  fastapi-starter.sh
linkedin_template/: .gitignore  README.md  bun.lockb  index.ts  output.txt  package.json
linkedin_template/templates/: base_template.txt  linkedin_post_template.txt
reddit/: pyproject.toml  scrape.py
