[project]
name = "reddit"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "RutamBhagat", email = "rutambhagat@gmail.com"},
]
dependencies = [
    "praw>=7.8.1",
    "pyperclip>=1.9.0",
    "dotenv>=0.0.5",
    "python-dotenv>=1.0.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
